--- a/styles/global.css
+++ b/styles/global.css
@@ -193,3 +193,7 @@ body {
   -moz-box-shadow: 0px 0px 5px 5px #0099e0;
   box-shadow: 0px 0px 5px 5px #0099e0;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
