--- a/styles/variables.css
+++ b/styles/variables.css
@@ -84,11 +84,11 @@ http://ionicframework.com/docs/theming/ */
 
   body {
     --ion-color-primary: #dab9f8;
-    --ion-color-primary-rgb: 66, 140, 255;
+    --ion-color-primary-rgb: 218, 185, 248;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255, 255, 255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-shade: #dab9f8;
+    --ion-color-primary-tint: #1c1125;
 
     --ion-color-secondary: #50c8ff;
     --ion-color-secondary-rgb: 80, 200, 255;
@@ -153,13 +153,13 @@ http://ionicframework.com/docs/theming/ */
    */
 
   .ios body {
-    --ion-background-color: #1c0530;
+    --ion-background-color: #0d0811;
     --ion-background-color-rgb: 0, 0, 0;
 
     --ion-text-color: #ffffff;
     --ion-text-color-rgb: 255, 255, 255;
 
-    --ion-color-step-50: #0d0d0d;
+    --ion-color-step-50: #0d0811;
     --ion-color-step-100: #1a1a1a;
     --ion-color-step-150: #262626;
     --ion-color-step-200: #333333;
@@ -179,9 +179,9 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
 
-    --ion-toolbar-background: #0d0d0d;
+    --ion-toolbar-background: #0d0811;
 
-    --ion-item-background: #000000;
+    --ion-item-background: #0d0811;
 
     --ion-card-background: #1c1c1d;
   }
