--- a/styles/variables.css
+++ b/styles/variables.css
@@ -220,7 +220,7 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #1e1e1e;
+    --ion-item-background: #0d0811;
 
     --ion-toolbar-background: #1c1125;
 
