--- a/styles/global.css
+++ b/styles/global.css
@@ -194,6 +194,20 @@ body {
   box-shadow: 0px 0px 5px 5px #0099e0;
 }
 
+.star-button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.on {
+  color: var(--ion-color-primary);
+  background-color: var(--ion-color-primary);
+}
+.off {
+  color: var(--ion-color-step-300);
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
