--- a/styles/global.css
+++ b/styles/global.css
@@ -215,3 +215,11 @@ body {
 h1 {
   @apply text-2xl md:text-3xl;
 }
+
+.outline-input {
+  border: .5px solid var(--ion-color-primary);
+  border-radius: 5px;
+}
+.outline-input input {
+  padding-left: .5rem !important;
+}
